CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (leechcraft-icons-crystalz)

INSTALL (DIRECTORY icons/ DESTINATION share/icons/crystalz
	PATTERN ".svn" EXCLUDE)

INCLUDE (InstallRequiredSystemLibraries)
SET (CPACK_CMAKE_GENERATOR "Unix Makefiles")
SET (CPACK_PACKAGE_NAME "leechcraft-icons-crystalz")
SET (CPACK_GENERATOR "DEB;RPM;TGZ")
SET (CPACK_PACKAGE_DESCRIPTION_SUMMARY "Zombieff's icon pack for LeechCraft")
SET (CPACK_PACKAGE_VENDOR "0xd34df00d")
SET (CPACK_DEBIAN_PACKAGE_SECTION "net")
SET (CPACK_DEBIAN_PACKAGE_DESCRIPTION "Glassy-look icon pack by Zombieff <zombieff@gmail.com>")
SET (CPACK_DEBIAN_PACKAGE_DEPENDS "leechcraft (>= 0.2.826)")
SET (CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/License.txt")
SET (CPACK_PACKAGE_VERSION_MAJOR "1")
SET (CPACK_PACKAGE_VERSION_MINOR "0")
SET (CPACK_PACKAGE_VERSION_PATCH "0")
SET (CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
SET (CPACK_PACKAGE_CONTACT "0xd34df00d@gmail.com")
SET (CPACK_DEBIAN_PACKAGE_MAINTAINER "Rudoy Georg <0xd34df00d@gmail.com>")
SET (CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA "${CMAKE_CURRENT_SOURCE_DIR}/scripts/postinst")
INCLUDE (CPack)
