CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (leechcraft-icons-oxygen)

INSTALL (DIRECTORY icons/ DESTINATION share/icons/oxygen
	PATTERN ".svn" EXCLUDE)

INCLUDE (InstallRequiredSystemLibraries)
SET (CPACK_CMAKE_GENERATOR "Unix Makefiles")
SET (CPACK_PACKAGE_NAME "leechcraft-icons-oxygen")
SET (CPACK_GENERATOR "DEB;RPM;TGZ")
SET (CPACK_PACKAGE_DESCRIPTION_SUMMARY "Oxygen icon pack for LeechCraft")
SET (CPACK_PACKAGE_VENDOR "Voker57")
SET (CPACK_DEBIAN_PACKAGE_SECTION "net")
SET (CPACK_DEBIAN_PACKAGE_DESCRIPTION "Oxygen icon pack by Voker57 <voker57@gmail.com>")
SET (CPACK_DEBIAN_PACKAGE_DEPENDS "leechcraft (>= 0.2.1)")
SET (CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/License.txt")
SET (CPACK_PACKAGE_VERSION_MAJOR "1")
SET (CPACK_PACKAGE_VERSION_MINOR "0")
SET (CPACK_PACKAGE_VERSION_PATCH "0")
SET (CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
SET (CPACK_PACKAGE_CONTACT "voker57@gmail.com")
SET (CPACK_DEBIAN_PACKAGE_MAINTAINER "Voker57 <voker57@gmail.com>")
SET (CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA "${CMAKE_CURRENT_SOURCE_DIR}/scripts/postinst")
INCLUDE (CPack)
